src-tauri/src/commands/snapshots/verrou__commands__entries__tests__entry_detail_dto_snapshot.snap
---
source: src-tauri/src/commands/entries.rs
assertion_line: 490
expression: dto
---
{
  "id": "a1b2c3d4-e5f6-4a7b-8c9d-0e1f2a3b4c5d",
  "entryType": "totp",
  "name": "GitHub",
  "issuer": "github.com",
  "algorithm": "SHA1",
  "digits": 6,
  "period": 30,
  "pinned": true,
  "createdAt": "2026-02-05T10:00:00Z",
  "updatedAt": "2026-02-05T10:00:00Z",
  "secret": "JBSWY3DPEHPK3PXP",
  "counter": 0
}
