src-tauri/src/commands/snapshots/verrou__commands__entries__tests__recovery_code_display_dto_snapshot.snap
---
source: src-tauri/src/commands/entries.rs
assertion_line: 1417
expression: dto
---
{
  "codes": [
    "ABCD-1234",
    "EFGH-5678",
    "IJKL-9012"
  ],
  "used": [
    1
  ],
  "totalCodes": 3,
  "remainingCodes": 2,
  "linkedEntryId": "totp-uuid-123",
  "hasLinkedEntry": true
}
