src-tauri/src/commands/snapshots/verrou__commands__entries__tests__recovery_code_display_dto_standalone_snapshot.snap
---
source: src-tauri/src/commands/entries.rs
assertion_line: 1430
expression: dto
---
{
  "codes": [
    "CODE-A",
    "CODE-B"
  ],
  "used": [],
  "totalCodes": 2,
  "remainingCodes": 2,
  "hasLinkedEntry": false
}
