src-tauri/src/commands/snapshots/verrou__commands__entries__tests__recovery_stats_dto_snapshot.snap
---
source: src-tauri/src/commands/entries.rs
assertion_line: 1495
expression: dto
---
{
  "total": 10,
  "remaining": 7
}
