src-tauri/src/commands/snapshots/verrou__commands__entries__tests__seed_display_dto_with_passphrase_snapshot.snap
---
source: src-tauri/src/commands/entries.rs
expression: dto
---
{
  "words": [
    "abandon",
    "abandon",
    "abandon",
    "abandon",
    "abandon",
    "abandon",
    "abandon",
    "abandon",
    "abandon",
    "abandon",
    "abandon",
    "about"
  ],
  "wordCount": 12,
  "hasPassphrase": true
}
